unpackaged/main/default/objects/ETT_Purchase_Order__c/ETT_Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>