unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Accepted_by_HOO__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accepted_by_HOO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted by HOO</label>
    <type>Checkbox</type>
</CustomField>