unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>