unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Attn__c.field-meta.xml
<CustomField>
    <fullName>ETT_Attn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>