unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bill_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill To</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>