unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_CC_Remark__c.field-meta.xml
<CustomField>
    <fullName>ETT_CC_Remark__c</fullName>
    <formula>ETT_Collection_Card__r.ETT_Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Remark</label>
    <type>Text</type>
</CustomField>