unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Effective_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>