unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Last_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Last_Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Approved Date</label>
    <type>Date</type>
</CustomField>