unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Order_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Order_Creation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Creation Date</label>
    <type>Date</type>
</CustomField>