unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ETT_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>