unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_PCR_Ref__c.field-meta.xml
<CustomField>
    <fullName>ETT_PCR_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCR Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>