unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Requisition_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_Requisition_No__c</fullName>
    <label>Requisition No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>