unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Total_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETT_Total_Line_Amount__c</fullName>
    <label>Total Line Amount</label>
    <summarizedField>ETT_Purchase_Order_Line_Item__c.ETT_Line_Amount__c</summarizedField>
    <summaryForeignKey>ETT_Purchase_Order_Line_Item__c.ETT_Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>