unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Purchase Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>