unpackaged/main/default/objects/ETT_Purchase_Order__c/fields/ETT_Vendor_TRN__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vendor_TRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor TRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>