unpackaged/main/default/objects/ETT_Purchase_Order__c/recordTypes/ETT_Tyre_Cash_Supplier_Draft_PO.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Cash_Supplier_Draft_PO</fullName>
    <active>true</active>
    <label>Tyre - Cash Supplier Draft PO</label>
</RecordType>